--- a/package.json
+++ b/package.json
@@ -8,5 +8,16 @@
   },
   "devDependencies": {
     "nuxt": "3.0.0-rc.3"
+  },
+  "dependencies": {
+    "-": "^0.0.1",
+    "autoprefixer": "^10.4.7",
+    "bootstrap": "^5.1.3",
+    "fibers": "^5.0.1",
+    "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
+    "sass": "^1.52.3",
+    "sass-loader": "^13.0.0",
+    "save-dev": "^0.0.1-security"
   }
 }
